--- a/app/static/scss/Utils/_variables.scss
+++ b/app/static/scss/Utils/_variables.scss
@@ -37,4 +37,4 @@ $screen-tablet: 768px;
 $screen-desktop: 1024px;
 $screen-desktop-lg: 1440px;
 
-$screen-max: $screen-desktop-lg;
+$screen-max: $screen-desktop;
