--- a/app/static/scss/components/_groups.scss
+++ b/app/static/scss/components/_groups.scss
@@ -6,7 +6,6 @@
   position: relative;
   width: 120px;
   margin: auto;
-  margin-bottom: 1.75rem;
 
   @media (min-width: $screen-desktop) {
     width: 100%;
