--- a/app/static/scss/components/_thumbs.scss
+++ b/app/static/scss/components/_thumbs.scss
@@ -5,6 +5,7 @@
 ul.thumbnails {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 
   li {
     margin: 5px;
@@ -16,43 +17,34 @@ ul.thumbnails {
     margin: 0;
     width: 120px; // so figcature will be limited too
 
-
     img {
       height: 120px;
       object-fit: cover;
       object-position: top center;
     }
 
-    figcaption {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 2.5rem;
-      background: $color-light-gray;
-      border-top: 1px solid $color-white-smoke;
-      text-transform: capitalize;
-
-      span {
-        font-size: .7rem;
-        text-align: center;
-        padding: 4px 2px 6px 2px;
-      }
-    }
-  }
-
-  @media (min-width: $screen-tablet) and (max-width: $screen-desktop - 1) {
-
-    figure.thumb {
+    @media (min-width: $screen-tablet) and (max-width: $screen-desktop - 1) {
       width: 110px;
       img { height: 110px; }
     }
+
   }
 
-  @media (min-width: $screen-desktop-lg) {
-    figure.thumb {
-      width: 150px;
-      img { height: 150px; }
+  figcaption {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 2.5rem;
+    background: $color-light-gray;
+    border-top: 1px solid $color-white-smoke;
+    text-transform: capitalize;
+
+    span {
+      font-size: .7rem;
+      text-align: center;
+      padding: 4px 2px 6px 2px;
     }
   }
+
 }
