--- a/app/static/scss/layout/_page.scss
+++ b/app/static/scss/layout/_page.scss
@@ -18,6 +18,7 @@
     img {
       @extend %img-responsive;
       margin: auto;
+      margin-top: 2rem;
     }
 
     a {
@@ -36,6 +37,7 @@
     @media (min-width: $screen-desktop) {
       margin-top: 2rem;
       margin-bottom: 2rem;
+      padding: $padding-page-sides * 2;
     }
   }
 }
